
+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/07/06.18_11_04.43.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	modified:   ZGame/game_tutorials/Direct3D/Camera/camera.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera/camera.h
	modified:   ZGame/game_tutorials/Direct3D/Camera/d3d_obj.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera/win_main.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
camera.2015/07/07.11_38_42.13.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/Direct3D/Camera Part2/camera.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera Part2/camera.h
	modified:   ZGame/game_tutorials/Direct3D/Camera Part2/win_main.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera Part3/camera.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera Part3/win_main.cpp
	modified:   ZGame/game_tutorials/Direct3D/Camera/win_main.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/07/07.18_07_14.17.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/Direct3D/Multi-Texturing/d3d_obj.cpp
	modified:   ZGame/game_tutorials/Direct3D/Multi-Texturing/d3d_texture.cpp
	modified:   ZGame/game_tutorials/Direct3D/Multi-Texturing/win_main.cpp
	modified:   ZGame/game_tutorials/Direct3D/Texture Mapping/d3d_texture.cpp
	modified:   ZGame/game_tutorials/Direct3D/Texture Mapping/d3d_texture.h
	modified:   ZGame/game_tutorials/Direct3D/Texture Mapping/win_main.cpp
