@@ -85,7 +85,7 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-07-06 12:47:05 L.178'40375 T2164961590.K ~460 +----+----+----+----+----+
+     Zndex_E : //z 2015-07-08 18:35:04 L.176'19496 T1458179770.K ~463 +----+----+----+----+----+
      TimeCnt : //z 2015-07-06 12:45:58 L.178'40442 T2164889884.K ~18  +----+----+----+----+----+
      Reg.Cnt : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~23  +----+----+----+----+----+
      #23  R+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~23    V+.474  L+.515  
@@ -113,7 +113,7 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-07-06 12:47:05 L.178'40375 T2164961590.K ~483   R+.23   L+.515  --+----+
+     Version : //z 2015-07-08 18:35:04 L.176'19496 T1458179770.K ~486   R+.23   L+.521  --+----+
      #25  V+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~475   R+.23   L+.517  
      #24  R+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~474   R+.23   L+.516  V+.474  
      #24  R+ : //z 2015-07-02 15:24:43 L.182'30917 T1470713170.K ~470   R+.22   L+.510  V+.470  
@@ -517,4 +517,7 @@ http://pan.baidu.com/wap/link?shareid=1955113446&uk=1142351078&third=0&dir=%2F%E
 01. 
 https://graphics.stanford.edu/~mdfisher/projects.html
 https://graphics.stanford.edu/~mdfisher/BaseCode.html
+
+2015-07-08 18:34 zitem dx 10 的例子
+http://www.braynzarsoft.net/index.php?p=DX10Lessons
 #endregion //z 2015-07-06 12:45:55 L.178'40445 BG57IV3@XCL T2164889881.K.F4146951713-+----+----+
