@@ -385,3 +385,14 @@ Changes to be committed:
 	modified:   ZGame/game_tutorials/Direct3D/Texture Mapping/d3d_texture.h
 	modified:   ZGame/game_tutorials/Direct3D/Texture Mapping/win_main.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/07/08.18_35_31.71.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
